--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>${snakeyaml-version}</version>
+    </dependency>
   </dependencies>
 
   <build>
