Implemented bukkit core plugin components

--- a/impl/bukkit/pom.xml
+++ b/impl/bukkit/pom.xml
@@ -36,6 +36,13 @@
   <build>
     <defaultGoal>clean package install</defaultGoal>
 
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
