--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,14 @@
     <artifactId>hawkeye</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
+  
+  <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.22</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <finalName>${project.name}</finalName>
