--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <workbench-version>0.0.1-SNAPSHOT</workbench-version>
     
     <!-- Dependency versions -->
+    <junit-version>4.11</junit-version>
     <snakeyaml-version>1.11</snakeyaml-version>
   </properties>
 
@@ -48,7 +49,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
