--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,12 +11,25 @@
     <artifactId>hawkeye</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
-  
+
+  <repositories>
+    <repository>
+      <id>goalieguy6-repo</id>
+      <url>http://repo.goalieguy6.com/content/groups/public</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.22</version>
+      <version>${mysql-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jnbt</groupId>
+      <artifactId>jnbt</artifactId>
+      <version>${jnbt-version}</version>
     </dependency>
   </dependencies>
 
@@ -25,6 +38,33 @@
     <defaultGoal>clean package install</defaultGoal>
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+                <includes>
+                  <include>org.jnbt:jnbt</include>
+                </includes>
+              </artifactSet>
+              <relocations>
+                <relocation>
+                  <pattern>org.jnbt</pattern>
+                  <shadedPattern>org.cubeville.lib.jnbt</shadedPattern>
+                </relocation>
+              </relocations>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
