--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <!-- Dependency versions -->
     <junit-version>4.11</junit-version>
     <snakeyaml-version>1.11</snakeyaml-version>
+    <mysql-version>5.1.22</mysql-version>
+    <jnbt-version>1.1</jnbt-version>
   </properties>
 
   <ciManagement>
