--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <snakeyaml-version>1.11</snakeyaml-version>
     <mysql-version>5.1.22</mysql-version>
     <jnbt-version>1.1</jnbt-version>
+    <worldedit-version>5.4.6-SNAPSHOT</worldedit-version>
   </properties>
 
   <ciManagement>
@@ -51,6 +52,10 @@
     <repository>
       <id>goalieguy6-repo</id>
       <url>http://repo.goalieguy6.com/content/gropus/public</url>
+    </repository>
+    <repository>
+      <id>sk89q-repo</id>
+      <url>http://maven.sk89q.com/repo</url>
     </repository>
   </repositories>
 
