--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,6 +26,18 @@
     </dependency>
 
     <dependency>
+      <groupId>com.jolbox</groupId>
+      <artifactId>bonecp</artifactId>
+      <version>${bonecp-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>${slf4j-version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
       <version>${worldedit-version}</version>
@@ -51,8 +63,20 @@
               <artifactSet>
                 <includes>
                   <include>org.cubeville.hawkeye:api</include>
+                  <include>com.jolbox:bonecp</include>
+                  <include>org.slf4j:*</include>
                 </includes>
               </artifactSet>
+              <relocations>
+                <relocation>
+                  <pattern>com.jolbox.bonecp</pattern>
+                  <shadedPattern>org.cubeville.hawkeye.lib.bonecp</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.slf4j</pattern>
+                  <shadedPattern>org.cubeville.hawkeye.lib.slf4j</shadedPattern>
+                </relocation>
+              </relocations>
             </configuration>
           </execution>
         </executions>
