--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,15 @@
     <bukkit-version>1.6.1-R0.1-SNAPSHOT</bukkit-version>
     <workbench-version>0.0.1-SNAPSHOT</workbench-version>
 
+    <!-- Plugin dependency versions -->
+    <worldedit-version>5.5.8-SNAPSHOT</worldedit-version>
+
     <!-- Dependency versions -->
     <junit-version>4.11</junit-version>
     <snakeyaml-version>1.12</snakeyaml-version>
     <mysql-version>5.1.25</mysql-version>
-    <worldedit-version>5.5.8-SNAPSHOT</worldedit-version>
+    <bonecp-version>0.8.0-rc1</bonecp-version>
+    <slf4j-version>1.7.5</slf4j-version>
   </properties>
 
   <ciManagement>
