--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,6 +12,13 @@
     <version>2.0.0-SNAPSHOT</version>
   </parent>
 
+  <repositories>
+    <repository>
+      <id>sk89q-repo</id>
+      <url>http://maven.sk89q.com/repo</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.cubeville.hawkeye</groupId>
