--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,17 @@
     <hawkeye-version>2.0.0-SNAPSHOT</hawkeye-version>
 
     <!-- Server implementation versions -->
-    <bukkit-version>1.6.1-R0.1-SNAPSHOT</bukkit-version>
-    <workbench-version>0.0.1-SNAPSHOT</workbench-version>
+    <bukkit-version>1.7.9-R0.2</bukkit-version>
 
     <!-- Plugin dependency versions -->
-    <worldedit-version>5.5.8-SNAPSHOT</worldedit-version>
+    <worldedit-version>6.0.0-SNAPSHOT</worldedit-version>
 
     <!-- Dependency versions -->
     <junit-version>4.11</junit-version>
     <snakeyaml-version>1.12</snakeyaml-version>
     <mysql-version>5.1.25</mysql-version>
-    <bonecp-version>0.8.0-rc1</bonecp-version>
-    <slf4j-version>1.7.5</slf4j-version>
+    <bonecp-version>0.8.0.RELEASE</bonecp-version>
+    <slf4j-version>1.7.10</slf4j-version>
   </properties>
 
   <ciManagement>
@@ -37,7 +36,6 @@
     <module>api</module>
     <module>core</module>
     <module>impl/bukkit</module>
-    <!-- <module>impl/workbench</module> -->
   </modules>
 
   <dependencies>
